# TongjiCSHomework

./: .gitignore
web技术/大作业/: STORYS.mdl  STORYS.md~  web大作业.pptx  汇报文档.docx
web技术/第一次实验/: 2152809-曾崇然-实验1.doc
web技术/第三次实验/: 播放列表.css  播放列表.js  视频播放器.html  视频窗口.css  视频窗口.js
web技术/第二次实验/: 2152809-曾崇然-第二次实验报告.doc
web技术/课堂作业/: 2152809-曾崇然.docx  box.html  mybox.html  xvbox.html
人工智能/实验/: 2152809-曾崇然-project1-报告.docx  2152809-曾崇然-project2-报告.docx  2152809-曾崇然-project5-报告.docx
人工智能/期中大作业/: 2152809-曾崇然.docx  毕业设计(论文)模板(理工类).doc
人工智能/笔头作业/: 2152809-曾崇然-第一次作业.docx  2152809-曾崇然-第七次作业.docx  2152809-曾崇然-第三次作业.docx  2152809-曾崇然-第二次作业.docx  2152809-曾崇然-第五次作业.docx  2152809-曾崇然-第六次作业.docx  2152809-曾崇然-第四次作业.docx
操作系统/ppt/: 内核实验一实验指导.7z
操作系统课程设计/SecondaryFS_CMake/: CMakeLists.txt  main.cpp
操作系统课程设计/SecondaryFS_CMake/BufferSubSystem/: BufferManager.cpp
操作系统课程设计/SecondaryFS_CMake/DiskSubSystem/: DiskManager.cpp
操作系统课程设计/SecondaryFS_CMake/FileSubSystem/: File.cpp  FileManager.cpp  FileSystem.cpp  INode.cpp  OpenFileManager.cpp
操作系统课程设计/SecondaryFS_CMake/Kenel/: Kernel.cpp  Space.cpp  State.cpp
操作系统课程设计/SecondaryFS_CMake/includes/: Buf.h  BufferManager.h  DiskManager.h  File.h  FileManager.h  FileSystem.h  INode.h  Kernel.h  OpenFileManager.h  Space.h  State.h
操作系统课程设计/SecondaryFS_CMake/testfiles/: test2.txt
数据库系统原理/experiment/: 2152809-曾崇然-数据库系统原理-实验1.docx  2152809-曾崇然-数据库系统原理-实验2.docx  2152809-曾崇然-数据库系统原理-实验3.docx  2152809-曾崇然-数据库系统原理-实验4.docx  2152809-曾崇然-数据库系统原理-实验5.docx  2152809-曾崇然-数据库系统原理-实验6.docx  Chapter0.2_MariaDB安装指导.pptx  (+3 more)
计算机系统结构/: 复习资料2023.doc
(+680 files in other folders)
